syntax = "proto3";

package echo.service.v1;

option go_package = "github.com/go-tangra/go-tangra-portal/api/gen/go/echo/service/v1;echopb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "gnostic/openapi/v3/annotations.proto";

// Document-level OpenAPI settings with x-menu extensions
option (gnostic.openapi.v3.document) = {
  info: {
    title: "Echo Service API";
    version: "1.0.0";
    description: "A simple echo service for testing dynamic module registration";

    // Module metadata extensions
    specification_extension: [
      {
        name: "x-module-id";
        value: { yaml: "echo" };
      },
      {
        name: "x-module-name";
        value: { yaml: "Echo Service" };
      },
      {
        name: "x-module-icon";
        value: { yaml: "lucide:megaphone" };
      }
    ]
  }

  // Top-level menu definitions as YAML string
  specification_extension: [
    {
      name: "x-menus";
      value: {
        yaml: "- id: echo\n  parent_id: null\n  type: CATALOG\n  name: EchoModule\n  path: /echo\n  icon: lucide:megaphone\n  order: 500\n  authority:\n    - platform:admin\n    - tenant:manager\n- id: echo-messages\n  parent_id: echo\n  type: MENU\n  name: Messages\n  path: messages\n  component: modules/echo/messages/index.vue\n  icon: lucide:message-square\n  order: 1\n  authority:\n    - platform:admin\n    - tenant:manager"
      };
    }
  ]
};

// EchoService provides simple echo functionality for testing dynamic module registration
service EchoService {
  // Echo returns the input message
  rpc Echo(EchoRequest) returns (EchoResponse) {
    option (google.api.http) = {
      post: "/v1/echo"
      body: "*"
    };
    option (gnostic.openapi.v3.operation) = {
      summary: "Echo a message";
      description: "Returns the input message with a timestamp";
      tags: ["EchoService"];
      specification_extension: [
        {
          name: "x-menu-ref";
          value: { yaml: "echo-messages" };
        }
      ]
    };
  }

  // ListMessages returns a list of stored messages
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse) {
    option (google.api.http) = {
      get: "/v1/messages"
    };
    option (gnostic.openapi.v3.operation) = {
      summary: "List all messages";
      description: "Returns a paginated list of stored messages";
      tags: ["EchoService"];
      specification_extension: [
        {
          name: "x-menu-ref";
          value: { yaml: "echo-messages" };
        }
      ]
    };
  }

  // GetMessage returns a specific message by ID
  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse) {
    option (google.api.http) = {
      get: "/v1/messages/{id}"
    };
    option (gnostic.openapi.v3.operation) = {
      summary: "Get a message by ID";
      description: "Returns a specific message";
      tags: ["EchoService"];
    };
  }

  // CreateMessage creates a new message
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse) {
    option (google.api.http) = {
      post: "/v1/messages"
      body: "*"
    };
    option (gnostic.openapi.v3.operation) = {
      summary: "Create a new message";
      description: "Creates and stores a new message";
      tags: ["EchoService"];
      specification_extension: [
        {
          name: "x-menu-ref";
          value: { yaml: "echo-messages" };
        }
      ]
    };
  }

  // DeleteMessage deletes a message by ID
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse) {
    option (google.api.http) = {
      delete: "/v1/messages/{id}"
    };
    option (gnostic.openapi.v3.operation) = {
      summary: "Delete a message";
      description: "Deletes a message by ID";
      tags: ["EchoService"];
    };
  }

  // HealthCheck returns the health status of the service
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
    option (gnostic.openapi.v3.operation) = {
      summary: "Health check";
      description: "Returns the health status of the service";
      tags: ["EchoService"];
    };
  }
}

// EchoRequest contains the message to echo
message EchoRequest {
  string message = 1;
}

// EchoResponse contains the echoed message
message EchoResponse {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// Message represents a stored message
message Message {
  string id = 1;
  string content = 2;
  string author = 3;
  google.protobuf.Timestamp created_at = 4;
  map<string, string> metadata = 5;
}

// ListMessagesRequest is the request for listing messages
message ListMessagesRequest {
  int32 page_size = 1;
  int32 page = 2;
  string filter = 3;
}

// ListMessagesResponse contains a list of messages
message ListMessagesResponse {
  repeated Message messages = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// GetMessageRequest is the request for getting a single message
message GetMessageRequest {
  string id = 1;
}

// GetMessageResponse is the response for getting a single message
message GetMessageResponse {
  Message message = 1;
}

// CreateMessageRequest is the request for creating a message
message CreateMessageRequest {
  string content = 1;
  string author = 2;
  map<string, string> metadata = 3;
}

// CreateMessageResponse is the response for creating a message
message CreateMessageResponse {
  Message message = 1;
}

// DeleteMessageRequest is the request for deleting a message
message DeleteMessageRequest {
  string id = 1;
}

// DeleteMessageResponse is the response for deleting a message
message DeleteMessageResponse {
  bool success = 1;
}

// HealthCheckRequest is the request for health check
message HealthCheckRequest {}

// HealthCheckResponse contains the health status
message HealthCheckResponse {
  string status = 1;
  string version = 2;
  google.protobuf.Timestamp timestamp = 3;
}
